fixed darkmode on blank page

--- a/public/blank.html
+++ b/public/blank.html
@@ -10,7 +10,7 @@
 	<style>
 		@media (prefers-color-scheme:dark){
 			body{
-				background-color: #242424;
+				background-color: #242424 !important;
 			}
 		}
 	</style>
