fixed a minor bug

--- a/public/404.html
+++ b/public/404.html
@@ -22,7 +22,7 @@
         xhttp.open("GET", "index.html", true);
         xhttp.send();*/
 		
-		document.location=document.location.toString().replace(`${location.protocol}//${location.host}/`,`${location.protocol}//${location.host}/#`)
+		document.location=document.location.toString().replace(`${location.protocol}//${location.host}/`,`${location.protocol}//${location.host}/#/`)
     </script>
 </body>
 </html>
